第二次提交

--- a/detail.html
+++ b/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>柑橘橙柚</title>
     <link rel="stylesheet" href="./stylesheet/detail.css">
 </head>
 <body>
@@ -88,12 +88,12 @@
        <div class="wrap">
            <div class="all">
                <div class="all-title">
-                   <a href="">全部商品分类▼</a>
+                   <a href="" class="both">全部商品分类▼</a>
                </div>
                <div class="all-list">
                    <div class="item">
                        <h3 class="i1">
-                           <a href="">
+                           <a href="#">
                                <i></i>
                                进口水果
                                <s></s>
@@ -249,7 +249,7 @@
                          <img src="./img/9288731366958386_500.jpg" alt="">
                      </div>
                  </div>
-                 <script src="./scripts/magnifier.js"></script>
+                 <script src="./scripts/detail.js"></script>
                  <!--------------------------------放大镜 ----------------------------->
                  <div class="product-information">
                    <div class="product-name">
